<resources>
    <string name="app_name">Carlton</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="carlton_greeting">Hello! I am Carlton</string>
    <string name="instruction">Please tap the button below and say a command!</string>
    <string name="button_text_enabled">push me!</string>
    <string name="button_text_disabled">listening...</string>
    <string name="carlton_name">CARLTON BANKS</string>
    <string name="call_command_name">Call</string>
    <string name="text_command_name">Text</string>
    <string name="weather_command_name">Weather</string>
    <string name="carlton_secret_message">Hello! I\'m Carlton Banks.  I\'m known for my dancing abilities.  As seen in the 90\'s tv show The Fresh Prince of Bel-Air</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="weather_activity_temp_label">Temperature in Fahrenheit:</string>
    <string name="weather_activity_cond_label">Condition:</string>
    <string name="weather_activity_default_value">...</string>
    <string name="listen_button_inactive_text">Push to say command</string>
    <string name="listen_button_active_text">listening...</string>
    <string name="listen_button_initializing_text">Please wait...</string>
    <string name="listen_button_setup_failed">setup failed</string>
    <string name="weather_top_label">Weather Report</string>
</resources>
