<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <!-- This UI felt lonely, so here's a picture of Carlton Banks from Fresh Prince -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carltonView"
            android:src="@drawable/carlton"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/instruction"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <!-- Test layout to check functions before adding voice functionality -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_command_name"
                android:id="@+id/callButton"
                android:onClick="onCallButtonPress" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_command_name"
                android:id="@+id/weatherButton"
                android:onClick="onWeatherButtonPress"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_command_name"
                android:id="@+id/textButton"
                android:layout_gravity="center_horizontal"
                android:onClick="onTextButtonPress"/>
            </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listen_button_initializing_text"
            android:id="@+id/listenButton"
            android:enabled="false"
            android:layout_gravity="center_horizontal"

            android:onClick="onListenButtonPress"/>

    </LinearLayout>
</RelativeLayout>
